# jackhodgkiss.uk

./: .pre-commit-config.yaml  CNAME  README.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: build-and-deploy.yml
content/: my-first-post.md
